# worldmonitor

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
api/: _rss-allowed-domains.js  health.js
docs/: AI_INTELLIGENCE.md  ALGORITHMS.md  ARCHITECTURE.md  DATA_SOURCES.md  DESKTOP_APP.md  DOCUMENTATION.md  FINANCE_DATA.md  MAP_ENGINE.md
docs/Docs_To_Review/: DOCUMENTATION.md
scripts/: _seed-utils.mjs  ais-relay.cjs  fetch-gpsjam.mjs  seed-bis-data.mjs  seed-crypto-quotes.mjs  seed-cyber-threats.mjs  seed-insights.mjs  seed-stablecoin-markets.mjs  seed-unrest-events.mjs
server/_shared/: hash.ts  redis.ts
shared/: rss-allowed-domains.json
src/: App.ts  live-channels-window.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sidecar/: local-api-server.mjs
src-tauri/src/: main.rs
src/app/: data-loader.ts  event-handlers.ts  panel-layout.ts  pending-panel-data.ts  refresh-scheduler.ts
src/components/: AirlineIntelPanel.ts  CIIPanel.ts  DeckGLMap.ts  ETFFlowsPanel.ts  GdeltIntelPanel.ts  GlobeMap.ts  GulfEconomiesPanel.ts  InsightsPanel.ts  LiveNewsPanel.ts  LiveWebcamsPanel.ts  MacroSignalsPanel.ts  Map.ts  MapContainer.ts  Panel.ts  ServiceStatusPanel.ts  StablecoinPanel.ts  StrategicPosturePanel.ts  StrategicRiskPanel.ts  TechEventsPanel.ts  UnifiedSettings.ts
src/config/: basemap.ts  commodity-geo.ts  commodity-markets.ts  commodity-miners.ts  feeds.ts  index.ts  map-layer-definitions.ts  panels.ts  variant-meta.ts  variant.ts
src/e2e/: map-harness.ts  mobile-map-integration-harness.ts
(+57 files in other folders)
